--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         run: cmake --preset gcc-default
       
       - name: Build
-        run: cmake --build --preset 
+        run: cmake --build --preset build-gcc
       
       - name: Run tests
         run: ctest --preset test-gcc
@@ -38,11 +38,12 @@ jobs:
           arduino-cli core install arduino:samd
 
       - name: Setup Python library
-        run: python -m pip install -e python-lib
+        working-directory: python-lib
+        run: python -m pip install -e .[dev]
 
       - name: Generate code
         working-directory: examples/arduino
-        run: python -m line_protocol.codegen --network
+        run: python -m line_protocol.codegen network.json --node Arduino --output .
 
       - name: Build sketch
         working-directory: examples/arduino
@@ -58,7 +59,7 @@ jobs:
 
       - name: Setup Python library
         working-directory: python-lib
-        run: python -m pip install -e .
+        run: python -m pip install -e .[dev]
       
       - name: Run tests
         working-directory: python-lib
