--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,10 @@ jobs:
         with:
           submodules: 'true'
 
+      - name: Setup Python library
+        working-directory: python-lib
+        run: python -m pip install -e .[dev]
+
       - name: Configure
         run: cmake --preset gcc-default
       
