--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,12 @@
 cmake_minimum_required(VERSION 3.20)
-project(line-protocol LANGUAGES C CXX)
+project(
+    line-protocol
+    VERSION "0.1.0"
+    LANGUAGES C CXX)
 
-enable_testing()
-set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)
+option(LINE_PROTOCOL_BUILD_TESTS "Enables library test cases" OFF)
 
 find_package(Python REQUIRED)
-
-include(GoogleTest)
-add_subdirectory(lib/googletest)
-add_subdirectory(lib/fff)
-
-# Target
 add_library(line-protocol-api INTERFACE)
 target_include_directories(line-protocol-api INTERFACE
     ${CMAKE_CURRENT_SOURCE_DIR}/src
@@ -18,20 +14,21 @@ target_include_directories(line-protocol-api INTERFACE
 
 add_library(line-protocol-sources INTERFACE)
 target_sources(line-protocol-sources INTERFACE
-    src/transport.c
-    src/application.c
-    src/diagnostics.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/transport.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/application.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/diagnostics.c
 )
 
-add_library(line-protocol-lib STATIC EXCLUDE_FROM_ALL)
-target_link_libraries(line-protocol-lib PRIVATE line-protocol-sources)
-target_link_libraries(line-protocol-lib PUBLIC line-protocol-api)
+add_library(line-protocol-adapter-sources INTERFACE)
+target_sources(line-protocol-adapter-sources INTERFACE
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/app_adapter.c
+)
 
 function(line_codegen)
 
 cmake_parse_arguments(
     ""
-    ""
+    "ADAPTER"
     "TARGET;NETWORK;NODE"
     ""
     ${ARGN}
@@ -41,58 +38,48 @@ cmake_parse_arguments(
     add_custom_target(
         line-codegen-${_TARGET}
         COMMAND ${Python_EXECUTABLE} -m line_protocol.codegen ${_NETWORK} --node ${_NODE} --output ${line_codegen_dir}
+        DEPENDS ${_NETWORK}
         WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
         BYPRODUCTS ${line_codegen_dir}/line_api.c ${line_codegen_dir}/line_api.h
     )
     add_library(${_TARGET} INTERFACE)
     target_sources(${_TARGET} INTERFACE ${line_codegen_dir}/line_api.c)
     target_include_directories(${_TARGET} INTERFACE ${line_codegen_dir})
+    target_link_libraries(${_TARGET} INTERFACE line-protocol-sources line-protocol-api)
+    if(${_ADAPTER})
+        target_link_libraries(${_TARGET} INTERFACE line-protocol-adapter-sources)
+    endif()
     add_dependencies(${_TARGET} line-codegen-${_TARGET})
 endfunction()
 
-# Testing
-function(add_test TARGET)
-    target_compile_options(${TARGET} PRIVATE $<$<COMPILE_LANGUAGE:C>:--coverage>)
-    target_link_libraries(${TARGET} PRIVATE line-protocol-api)
-    target_link_libraries(${TARGET} PRIVATE gtest fff gcov)
-    gtest_discover_tests(${TARGET} DISCOVERY_MODE POST_BUILD)
-endfunction()
+if(LINE_PROTOCOL_BUILD_TESTS)
+    enable_testing()
+    include(FetchContent)
+    include(GoogleTest)
 
-add_executable(test_TransportReceive EXCLUDE_FROM_ALL)
-target_sources(test_TransportReceive PRIVATE
-    src/transport.c
-    tests/test_TransportReceive.cpp
-)
-add_test(test_TransportReceive)
+    FetchContent_Declare(
+        googletest
+        GIT_REPOSITORY https://github.com/google/googletest.git
+        GIT_TAG        release-1.12.0
+    )
+    FetchContent_Declare(
+        fff
+        GIT_REPOSITORY https://github.com/meekrosoft/fff.git
+        GIT_TAG        5111c61e1ef7848e3afd3550044a8cf4405f4199
+    )
 
-add_executable(test_ApplicationInterface EXCLUDE_FROM_ALL)
-target_sources(test_ApplicationInterface PRIVATE
-    src/application.c
-    tests/test_ApplicationInterface.cpp
-)
-add_test(test_ApplicationInterface)
+    FetchContent_MakeAvailable(googletest fff)
+    add_subdirectory(tests)
 
-line_codegen(
-    TARGET test_network
-    NETWORK tests/test_network.json
-    NODE Peripheral_1
-)
-add_executable(test_ApplicationSignals EXCLUDE_FROM_ALL)
-target_sources(test_ApplicationSignals PRIVATE
-    src/application.c
-    tests/test_ApplicationSignals.cpp
-)
-add_test(test_ApplicationSignals)
-target_link_libraries(test_ApplicationSignals PRIVATE test_network)
+    add_custom_target(
+        coverage
+        COMMAND ${Python_EXECUTABLE} -m gcovr --html-self-contained --html-details ${CMAKE_BINARY_DIR}/coverage.html
+        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+    )
 
-add_custom_target(
-    coverage
-    COMMAND ${Python_EXECUTABLE} -m gcovr --html-self-contained --html-details ${CMAKE_BINARY_DIR}/coverage.html
-    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-)
-
-add_custom_target(
-    docs
-    COMMAND ${Python_EXECUTABLE} -m sphinx -b html -E ${CMAKE_CURRENT_SOURCE_DIR}/docs ${CMAKE_CURRENT_SOURCE_DIR}/docs/_build
-    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-)
+    add_custom_target(
+        docs
+        COMMAND ${Python_EXECUTABLE} -m sphinx -b html -E ${CMAKE_CURRENT_SOURCE_DIR}/docs ${CMAKE_CURRENT_SOURCE_DIR}/docs/_build
+        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+    )
+endif()
