Updated CMake function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ function(line_codegen)
 cmake_parse_arguments(
     ""
     "ADAPTER"
-    "TARGET;NETWORK;NODE"
+    "TARGET;CONFIG"
     ""
     ${ARGN}
 )
@@ -37,7 +37,7 @@ cmake_parse_arguments(
     set(line_codegen_dir ${CMAKE_CURRENT_BINARY_DIR}/${_TARGET}_gencode)
     add_custom_target(
         line-codegen-${_TARGET}
-        COMMAND ${Python_EXECUTABLE} -m line_protocol.codegen ${_NETWORK} --node ${_NODE} --output ${line_codegen_dir}
+        COMMAND ${Python_EXECUTABLE} -m line_protocol.codegen ${_CONFIG} --output ${line_codegen_dir}
         DEPENDS ${_NETWORK}
         WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
         BYPRODUCTS ${line_codegen_dir}/line_api.c ${line_codegen_dir}/line_api.h
