Dynamic version from library.properties

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,25 @@
 cmake_minimum_required(VERSION 3.20)
+
+file(READ "${CMAKE_CURRENT_SOURCE_DIR}/library.properties" LIBRARY_PROPERTIES_CONTENT)
+string(REGEX MATCH "version=([^\n\r]+)" _ ${LIBRARY_PROPERTIES_CONTENT})
+set(LIBRARY_VERSION "${CMAKE_MATCH_1}")
+
 project(
     line-protocol
-    VERSION "0.3.0"
+    VERSION ${LIBRARY_VERSION}
     LANGUAGES C CXX)
 
+################################################################################
+# Options
+################################################################################
 option(LINE_PROTOCOL_BUILD_TESTS "Enables library test cases" OFF)
 option(LINE_PROTOCOL_BUILD_DOCS "Enables documentation generation" OFF)
 
 find_package(Python REQUIRED)
+
+################################################################################
+# Sources
+################################################################################
 add_library(line-protocol-api INTERFACE)
 target_include_directories(line-protocol-api INTERFACE
     ${CMAKE_CURRENT_SOURCE_DIR}/src
@@ -24,6 +36,48 @@ target_sources(line-protocol-adapter-sources INTERFACE
     ${CMAKE_CURRENT_SOURCE_DIR}/src/app_adapter.c
 )
 
+################################################################################
+# Functions
+################################################################################
+
+#[=======================================================================[.rst:
+LINE protocol code generation
+=============================
+
+This function provides a way to generate the LINE protocol API
+header and source files from the Python code generator.
+
+.. command:: line_codegen
+
+  Generate the LINE protocol API header and source files from the Python code generator::
+
+    line_codegen([ADAPTER]
+                 [TARGET target]
+                 [CONFIG config]
+    )
+
+  ``line_codegen()`` will collect all necessary information and generate the
+  required files in the specified output directory.
+
+  The options are:
+
+    - ``ADAPTER``: If specified, the generated code will include the adapter
+        sources. This is useful if you want to use the LINE protocol with an
+        adapter.
+
+    - ``TARGET``: The name of the target to create. This is used to create the
+        target name for the generated code. If not specified, the target name
+        will be derived from the current directory name.
+
+    - ``CONFIG``: The configuration to use for the code generation. This is
+        passed to the Python code generator. If not specified, the default
+        configuration will be used.
+
+    If specified, the parameter is passed along with ``--junitxml=<test name>``
+    to test executable. The actual file name is the same as the test target,
+    including prefix and suffix.
+
+#]=======================================================================]
 function(line_codegen)
 
 cmake_parse_arguments(
@@ -52,6 +106,9 @@ cmake_parse_arguments(
     add_dependencies(${_TARGET} line-codegen-${_TARGET})
 endfunction()
 
+################################################################################
+# Testing
+################################################################################
 if(LINE_PROTOCOL_BUILD_TESTS)
     enable_testing()
     include(FetchContent)
@@ -70,20 +127,11 @@ if(LINE_PROTOCOL_BUILD_TESTS)
 
     FetchContent_MakeAvailable(googletest fff)
     add_subdirectory(tests)
-
-    add_custom_target(
-        coverage
-        COMMAND ${Python_EXECUTABLE} -m gcovr --html-self-contained --html-details ${CMAKE_BINARY_DIR}/coverage.html
-        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-    )
-
-    add_custom_target(
-        docs
-        COMMAND ${Python_EXECUTABLE} -m sphinx -b html -E ${CMAKE_CURRENT_SOURCE_DIR}/docs ${CMAKE_CURRENT_SOURCE_DIR}/docs/_build
-        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-    )
 endif()
 
+################################################################################
+# Documentation
+################################################################################
 if(LINE_PROTOCOL_BUILD_DOCS)
     add_subdirectory(docs)
 endif()
