--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,12 +5,18 @@ function(add_test TARGET)
     gtest_discover_tests(${TARGET} DISCOVERY_MODE POST_BUILD)
 endfunction()
 
+################################################################################
+# Coverage
+################################################################################
 add_custom_target(coverage_report
     COMMAND ${CMAKE_COMMAND} -E echo "Generating coverage report..."
     COMMAND ${CMAKE_COMMAND} -E make_directory coverage
     COMMAND gcovr -r ${CMAKE_SOURCE_DIR} --html --html-details -o coverage/coverage.html
 )
 
+################################################################################
+# Test targets
+################################################################################
 add_executable(test_TransportReceive EXCLUDE_FROM_ALL)
 target_sources(test_TransportReceive PRIVATE
     ../src/transport.c
