--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,18 +75,4 @@ jobs:
       
 # TODO: linting?
 
-  sphinx_docs:
-    name: Documentation
-    runs-on: ubuntu-latest
-    container: python:3.10
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Install dependencies
-        run: python -m pip install -r docs/requirements.txt
-
-      - name: Build documentation
-        run: python -m sphinx -b html -E docs docs/_build
-
-      # TODO: archive
+# TODO: documentation?
